--- a/aspnetcore/package.json
+++ b/aspnetcore/package.json
@@ -6,18 +6,42 @@
   "scripts": {
     "tsc": "tsc",
     "test": "alsatian \"./reactApp/*.test.js\"",
-    "test-watch": "nodemon --watch \"./**/*.ts\" yarn test"
+    "test-watch": "nodemon --watch \"./**/*.ts\" yarn test",
+    "start": "cross-env ASPNETCORE_ENVIRONMENT=Development dotnet run",
+    "start-webpack-dev-server": "concurrently \"webpack-dev-server --hot --inline --port 8080\" \"dotnet run\" ",
+    "webpack-dev": "cross-env NODE_ENV=development webpack",
+    "webpack-production": "cross-env NODE_ENV=production webpack",
+    "build-dev": "npm run webpack-dev",
+    "build-production": "npm run webpack-production",
+    "watch-webpack-dev": "cross-env NODE_ENV=development webpack --watch --color",
+    "watch-webpack-production": "npm run build-production --watch --color",
+    "publish-for-iis": "npm run build-production && dotnet publish -c Release"
   },
   "devDependencies": {
     "alsatian": "^1.3.0",
+    "awesome-typescript-loader": "^3.1.2",
+    "clean-webpack-plugin": "^0.1.16",
+    "copy-webpack-plugin": "^4.0.1",
+    "cross-env": "^4.0.0",
+    "css-loader": "^0.28.0",
+    "file-loader": "^0.11.1",
+    "html-webpack-plugin": "^2.28.0",
     "nodemon": "^1.11.0",
+    "raw-loader": "^0.5.1",
+    "source-map-loader": "^0.2.1",
+    "style-loader": "^0.16.1",
+    "stylus-loader": "^3.0.1",
     "ts-loader": "^2.0.1",
     "tslint": "^4.5.1",
+    "tslint-loader": "^3.4.3",
     "typescript": "^2.2.1",
-    "webpack": "^2.2.1"
+    "webpack": "^2.3.3"
   },
   "dependencies": {
     "d3": "^4.7.3",
-    "react": "^15.4.2"
+    "fetch": "^1.1.0",
+    "got": "^6.7.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   }
 }
