--- a/aspnetcore/package.json
+++ b/aspnetcore/package.json
@@ -18,6 +18,8 @@
     "publish-for-iis": "npm run build-production && dotnet publish -c Release"
   },
   "devDependencies": {
+    "@types/react": "^15.0.21",
+    "@types/react-dom": "^0.14.23",
     "alsatian": "^1.3.0",
     "awesome-typescript-loader": "^3.1.2",
     "clean-webpack-plugin": "^0.1.16",
@@ -39,9 +41,10 @@
   },
   "dependencies": {
     "d3": "^4.7.3",
-    "fetch": "^1.1.0",
-    "got": "^6.7.1",
+    "es6-promise": "^4.1.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "stylus": "^0.54.5",
+    "whatwg-fetch": "^2.0.3"
   }
 }
