--- a/aspnetcore/package.json
+++ b/aspnetcore/package.json
@@ -20,16 +20,21 @@
   "devDependencies": {
     "@types/react": "^15.0.21",
     "@types/react-dom": "^0.14.23",
+    "@types/webpack-env": "^1.13.0",
     "alsatian": "^1.3.0",
+    "aspnet-webpack": "^1.0.28",
+    "aspnet-webpack-react": "^1.0.5",
     "awesome-typescript-loader": "^3.1.2",
     "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^4.0.0",
     "css-loader": "^0.28.0",
+    "event-source-polyfill": "^0.0.9",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "nodemon": "^1.11.0",
     "raw-loader": "^0.5.1",
+    "react-hot-loader": "next",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.16.1",
     "stylus-loader": "^3.0.1",
@@ -37,11 +42,13 @@
     "tslint": "^4.5.1",
     "tslint-loader": "^3.4.3",
     "typescript": "^2.2.1",
-    "webpack": "^2.3.3"
+    "webpack": "^2.3.3",
+    "webpack-hot-middleware": "^2.18.0"
   },
   "dependencies": {
     "d3": "^4.7.3",
     "es6-promise": "^4.1.0",
+    "eventsource": "^0.2.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "stylus": "^0.54.5",
